@@ -568,6 +568,7 @@ pages for purposes of page relevancy ranking.
 * Fix refreshLinks cleanup step on MySQL 3.x
 * Fix breakage on rerunning the site_stats update
 * Localized namespaces for csb
+* Fix for reading incorrectly re-gzipped HistoryBlob entries
 
 
 === Caveats ===
